# janki

./: .gitignore  Cargo.toml  README.md  janki_db.json
.github/workflows/: build.yml  build_stage.yml  ci.yml  fmt_clippy.yml  rust.yml
src/: csv.rs  db.rs  dummy_storage.rs  eframe_storage.rs  either.rs  errors.rs  file_storage.rs  game.rs  item.rs  lib.rs  storage.rs
src/cli/: main.rs
src/dioxus/: main.rs  state.rs
src/druid/: main.rs
src/egui/: janki_app.rs  main.rs
