[package]
name = "janki"
version = "0.2.2" #v0.1 was CLI-only, v0.2 has the GUI
edition = "2021"
description = "Janky Anki"
license = "MIT"
readme = "README.md"
keywords = ["cli", "learning", "anki", "serde"]
categories = ["command-line-utilities", "gui"]
repository = "https://github.com/Epacnoss/janki"
documentation = "https://docs.rs/janki/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.31"
serde = {version = "1.0.139", features = ["derive"], optional = true}
serde_json = {version = "1.0.82", optional = true }
eframe = {version = "0.18.0", features = ["persistence"], optional = true}
druid = {version = "0.7.0", optional = true}
tracing = "0.1.35"
opentelemetry = {version = "0.17.0", optional = true}

[dev-dependencies]
tracing-subscriber = "0.3.15"
opentelemetry-jaeger = {version = "0.16.0", features = ["reqwest_blocking_collector_client"]}
tracing-opentelemetry = "0.17.4"


[features]
default = ["serde_derive_structs", "file_storage"]

serde_derive_structs = ["dep:serde"]
serde_json_stuff = ["dep:serde", "dep:serde_json"]

file_storage = ["serde_json_stuff"]
eframe_storage = ["dep:eframe", "serde_json_stuff"]
druid_data = ["dep:druid"]
opentel = ["dep:opentelemetry"]


[[example]]
path = "src/cli/main.rs"
name = "janki_cli"


[[example]]
path = "src/egui/main.rs"
name = "janki_egui"
required-features = ["eframe_storage", "opentel"]

[[example]]
path = "src/druid/main.rs"
name = "janki_druid"
required-features = ["druid_data"]
