[package]
name = "janki"
version = "0.3.0" #v0.1 was CLI-only, v0.2 has the GUI, v0.3 has csvs
edition = "2021"
description = "Janky Anki"
license = "MIT"
readme = "README.md"
keywords = ["cli", "learning", "anki", "serde"]
categories = ["command-line-utilities", "gui"]
repository = "https://github.com/Epacnoss/janki"
documentation = "https://docs.rs/janki/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.31"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
eframe = {version = "0.18.0", features = ["persistence"], optional = true}
druid = {version = "0.7.0", optional = true}
tracing = "0.1.35"
opentelemetry = {version = "0.17.0", optional = true}
chrono = {version = "0.4.19", features = ["serde"]}

[dev-dependencies]
tracing-subscriber = "0.3.15"


[features]
eframe_storage = ["dep:eframe"]
druid_data = ["dep:druid"]
opentel = ["dep:opentelemetry"]


[[example]]
path = "src/cli/main.rs"
name = "janki_cli"

[[example]]
path = "src/egui/main.rs"
name = "janki_egui"
required-features = ["eframe_storage", "opentel"]